# zksync_tools

./: .gitignore  README.md
gateway/erc20/: README.md
operator/: README.md
tx_prover/: README.md
zkos/: README.md
zkos/calldata_generator/: README.md  generator.sh
zkos/calldata_generator/testnet/: ZkStack.yaml
zkos/calldata_generator/testnet/configs/: .gitignore  contracts.yaml  initial_deployments.yaml
zkos/generate_vk/: README.md  generate.sh
zkos/generate_vk/repos/: README.md
zkos/generate_vk/versions/2025-08-29/: L1VerifierPlonk.sol  settings.env  snark_vk_expected.json
zkos/generate_vk/versions/2025-09-24/: settings.env
zkos/generate_vk/versions/2025-10-07/: settings.env
zkos/generate_vk/versions/2025-10-08/: settings.env
zkos/recovery/: Cargo.toml  README.md  rust-toolchain.toml
zkos/recovery/src/: bytecodes.rs  chain_genesis.rs  contracts.rs  genesis.json  main.rs  sequencer_db.rs  state.rs  state_genesis.rs  statediffs.rs
zkos/update_contract_vk/: README.md  update.sh
zkos/update_state_json/: README.md  update.sh
zkos/update_state_json/ecosystem/local_v1/: .gitignore  ZkStack.yaml
zkos/update_state_json/ecosystem/local_v1/chains/era1/: ZkStack.yaml
zkos/update_state_json/ecosystem/local_v1/configs/: initial_deployments.yaml
