[package]
name = "recovery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Alloy 1.0+ meta-crate re-exports most pieces we need
alloy = { version = "1", features = [
"providers", # Provider + ProviderBuilder
"rpc-types", # Block/Tx types & enums
"sol-types", # ABI types + sol! macro
"contract", # helpers
"serde",
"serde-bincode-compat",
"eips",
"rlp"
] }
hex = "0.4"

serde = { version = "1", features = ["derive"] }
serde_with = "1"
serde_json = "1"
blake2 = "0.10.6"

tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"]}
bincode = { version = "2.0.1", features = ["serde"] }

rocksdb = "0.23.0"
alloy-rlp = { version = "0.3.12" }
leb128 = "0.2.5"
semver = "1.0.27"
futures = "0.3.31"

# Decide long term if needed.
zk_os_api = { package = "zksync_os_api", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.25" }
zk_os_basic_system = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.25" }
